Fixed spacing a little

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,11 @@ button {
   border-radius: 10px;
 }
 
+button:hover {
+  cursor: pointer;
+  background-color: rgb(161, 161, 161);
+}
+
 .buttons {
   display: flex;
   width: 300px;
